--- a/src/css/style.css
+++ b/src/css/style.css
@@ -384,6 +384,10 @@ main { flex-grow: 1; }
   object-fit: cover;
 }
 
+.section-title {
+  margin-block-end: 8px;
+}
+
 /*-----------------------------------*\
   #COMPONENTS
 \*-----------------------------------*/
@@ -584,6 +588,17 @@ main { flex-grow: 1; }
 }
 
 /* badge button */
+
+.badge-btn {
+  height: 40px;
+  border-radius: var(--radius-pill);
+  background-color: var(--badge-btn);
+  color: var(--on-badge-btn);
+  max-width: max-content;
+  padding-inline: 16px;
+  display: grid;
+  place-items: center;
+}
 
 /* filter button */
 
@@ -812,18 +827,71 @@ input[type="search"]::-webkit-search-cancel-button {
   margin-block-start: 12px;
 } 
 
+
 /*-----------------------------------*\
   #RECIPE SLIDER
 \*-----------------------------------*/
 
+.slider {
+  --gap: 8px;
+  position: relative;
+  overflow-x: auto;
+  scroll-snap-type: inline mandatory;
+  padding-block-end: 5px;
+}
 
+.slider::-webkit-scrollbar { height: 4px; }
 
+.slider::-webkit-scrollbar-thumb {
+  background-color: transparent;
+}
 
+.slider:where(:hover, :focus-visible)::-webkit-scrollbar-thumb {
+  background-color: var(--alpha-10);
+}
+
+.slider-wrapper {
+  display: flex;
+  align-items: stretch;
+  gap: var(--gap);
+  transition: var(--transition-medium);
+}
+
+.slider-item {
+  min-width: calc(50% - 4px);
+  scroll-snap-align: start;
+}
+
+.load-more-card {
+  height: 100%;
+  background-color: var(--primary-container);
+  border-radius: var(--radius-4);
+  border: 1px solid var(--outline);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+}
 
 /*-----------------------------------*\
   #TAG
 \*-----------------------------------*/
 
+.tag { text-align: center; }
+
+.tag .section-text {
+  max-width: 50ch;
+  margin-inline: auto;
+}
+
+.tag-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  margin-block-start: 24px;
+}
 
 
 
