--- a/src/css/style.css
+++ b/src/css/style.css
@@ -374,7 +374,7 @@ main { flex-grow: 1; }
 }
 
 .img-holder {
-  background: var(--image-background) url(../../public/images/image-placeholder.svg) no-repeat 30% center;
+  background: var(--image-background) url(../../public/images/image-placeholder.svg) no-repeat center;
   overflow: hidden;
 }
 
@@ -387,6 +387,17 @@ main { flex-grow: 1; }
 .section-title {
   margin-block-end: 8px;
 }
+
+.snackbar-container{
+  position: fixed;
+  bottom: calc(var(--mobile-nav-height) + 16px);
+  left: 16px;
+  right: 16px;
+  display: grid;
+  gap: 8px;
+  z-index: 4;
+}
+
 
 /*-----------------------------------*\
   #COMPONENTS
@@ -625,6 +636,32 @@ main { flex-grow: 1; }
  * Snackbar
  */
 
+ .snackbar {
+  height: 48px;
+  width: 100%;
+  background-color: var(--on-background-variant);
+  color: var(--background);
+  padding-inline: 16px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: var(--radius-4);
+  box-shadow: var(--shadow-1);
+  animation: snackbar 3s var(--transition-timing-function) forwards;
+ }
+
+ @keyframes snackbar {
+  0%{
+    height: 0;
+    opacity: 0;
+  }
+  10%,
+  95%{
+    height: 48px;
+    opacity: 1;
+  }
+  100% { opacity: 0;}
+ }
 
 
 
