Rendered Saved Recipes page from local storage

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1342,9 +1342,11 @@ input[type="search"]::-webkit-search-cancel-button {
   #SAVED RECIPE PAGE
 \*-----------------------------------*/
 
+.saved-recipe-page {
+  padding-block-end: 24px;
+}
 
-
-
+.saved-recipe-page .section-title { line-height: 40px;}
 
 /*-----------------------------------*\
   #MEDIA QUERIES
