--- a/src/css/style.css
+++ b/src/css/style.css
@@ -369,7 +369,7 @@ main { flex-grow: 1; }
 
 .grid-list {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(172px, 1fr));
+  grid-template-columns: 1fr 1fr;
   gap: 12px 8px;
 }
 
@@ -1351,3 +1351,360 @@ input[type="search"]::-webkit-search-cancel-button {
 /*-----------------------------------*\
   #MEDIA QUERIES
 \*-----------------------------------*/
+
+/**
+ * Responsive for larger than 600px screen
+ */
+
+@media (min-width: 600px) {
+  /**
+   *  CUSTOM PROPERTY
+   */
+
+  :root {
+    /**
+     *  TYPOGRAPHY
+     */
+
+    /* font size */
+    --fs-display-large: 3.6rem;
+    --fs-display-medium: 3.6rem;
+    --fs-display-small: 3rem;
+  }
+
+
+  /**
+   * REUSED STYLE
+   */
+  
+  .container {
+    padding-inline: 32px;
+  }
+
+  .grid-list { grid-template-columns: repeat(auto-fill, minmax(172px, 1fr)); }
+
+  .snackbar-container {
+    right: auto;
+    left: 32px;
+    max-width: 360px;
+    width: 100%;
+  }
+
+  /**
+   *  TYPOGRAPHY
+   */
+
+  .display-large,
+  .display-medium { line-height: 44px; }
+
+  .display-small { line-height: 36px; }
+
+  .title-small {
+    font-size: 1.6rem;
+    font-weight: var(--weight-medium);
+    line-height: 24px;
+    letter-spacing: 0.15px;
+  }
+
+  /**
+   * HERO
+   */
+  .banner-card { background-image: url("../../public/images/hero-banner-medium.jpg"); }
+
+  .search-field { height: 72px; }
+
+  .search-wrapper .search-submit { width: 100px; }
+
+  .hero .search-wrapper { 
+    margin-block: 24px 16px;
+  }
+
+
+  /**
+   * TAB
+   */
+
+  .tab .tab-list {
+    margin-inline: 0;
+    padding-inline: 0;
+  }
+
+  .tab .btn-secondary {
+    max-width: max-content;
+    margin-inline: auto;
+  }
+
+  /**
+   * RECIPE SLIDER
+   */
+
+  .slider-item { max-width: 286px; }
+
+  /**
+   * TAG
+   */
+
+  .tag .section-title { margin-block-end: 12px; }
+
+  /**
+   * FOOTER
+   */
+
+  .footer {
+    justify-content: space-between;
+    padding-inline: 32px;
+  }
+
+  /**
+   * FILTER BAR
+   */
+
+  .filter-bar { border-radius: var(--radius-8); }
+
+  /**
+   * DETAIL PAGE
+   */
+
+  .detail-banner { max-width: 420px; }
+
+  .detail-stats .stats-item { padding-block: 20px; }
+}
+
+
+
+
+/**
+ * Responsive for larger than 768px screen
+ */
+
+@media (min-width: 768px) {
+
+  /**
+   * REUSED STYLE
+   */
+
+  :root {
+
+    /**
+     * OTHERS
+     */
+
+    --header-height: 72px;
+    --mobile-nav-height: 0px;
+  }
+
+
+  /**
+   * RESET
+   */
+
+  body { padding-block-end: 0; }
+
+  /**
+   * REUSED STYLE
+   */
+
+  .snackbar-container { bottom: 32px;}
+  
+  /**
+   * HEADER
+   */
+
+  .header { padding-inline: 32px; }
+
+  .navbar,
+  .header .btn-primary,
+  .navbar-list { display: flex; }
+
+  .navbar { margin-inline-start: auto; }
+
+  .navbar-link {
+    position: relative;
+    height: var(--header-height);
+    display: grid;
+    grid-template-columns: 1fr min-content;
+    align-items: center;
+    padding-inline: 24px;
+    opacity: 0.9;
+  }
+
+  .navbar-link.active { opacity: 1; }
+
+  .navbar-link.active::before {
+    content: "";
+    order: 1;
+    height: 3px;
+    background-color: var(--primary);
+    border-radius: var(--radius-pill) var(--radius-pill) 0 0;
+  }
+
+  /**
+   * MOBILE NAV
+   */
+
+  .mobile-nav { display: none; }
+
+  /**
+   * FOOTER
+   */
+
+  .footer .logo { display: block; }
+}
+
+/**
+ * Responsive for larger than 992px screen
+ */
+
+@media (min-width: 992px) {
+
+  /**
+   * CUSTOM PROPERTY
+   */
+
+  :root {
+
+    /**
+     * TYPOGRAPHY
+     */
+    
+    /* font size */
+    --fs-display-large: 5.7rem;
+    --fs-display-medium: 4.5rem;
+    --fs-display-small: 3.6rem;
+
+    /**
+     * OTHERS
+     */
+    
+     --header-height: 80px;
+    
+  }
+
+  /**
+   * TYPOGRAPHY
+   */
+
+  .display-large { line-height: 64px; }
+
+  .display-large { line-height: 52px; }
+
+  .display-large { line-height: 44px; }
+
+  /**
+   * HEADER
+   */
+
+  .header { padding-inline: 40px; }
+
+  .navbar-link { padding-inline: 40px; }
+
+
+  /**
+   * HERO
+   */
+
+  .hero .search-wrapper { max-width: 800px; }
+
+  .banner-card { background-image: url('../../public/images/hero-banner-large.jpg'); }
+
+  .banner-card> .label-medium {
+    font-size: 1.4rem;
+    font-weight: var(--weight-regular);
+    opacity: 0.8;
+  }
+
+  /**
+   * TAB
+   */
+
+  .tab .tab-list { margin-block-start: 0; }
+
+  .tab-btn { height: 64px; }
+
+  /**
+   * RECIPE SLIDER
+   */
+
+  .slider-item { min-width: calc(20% - 6.4px); }
+
+  /**
+   * RECIPE PAGE
+   */
+
+  .filter-bar,
+  .filter-bar.active {
+    all: unset;
+    position: sticky;
+    top: var(--header-height);
+    margin-block-start: -16px;
+    height: calc(100vh - var(--header-height));
+    max-width: 370px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    border-inline-end: 1px solid var(--outline);
+    overflow: auto;
+  }
+
+  .filter-bar::-webkit-scrollbar { width: 4px; }
+
+  .filter-bar::-webkit-scrollbar-thumb {
+    background-color: var(--alpha-10);
+  }
+
+  .filter-bar .close-btn { display: none; }
+
+  .filter-content { overflow-y: visible; }
+
+  .filter-content .search-wrapper {
+    padding-block-start: 0;
+  }
+
+  .filter-chip {
+    padding-inline: 5px;
+  }
+
+  .recipe-page {
+    position: relative;
+    display: flex;
+  }
+
+  .btn-filter,
+  .overlay { display: none; }
+
+  /**
+   * FOOTER
+   */
+  
+  .footer { padding-inline: 40px; }
+
+  /**
+   * DETAIL PAGE
+   */
+  
+  .detail-page-main {
+    display: grid;
+    grid-template-columns: 1fr;
+    align-items: center;
+  }
+
+  .detail-page {
+    display: grid;
+    grid-template-columns: 0.8fr 1fr;
+    align-items: flex-start;
+    gap: 36px;
+  }
+
+  .detail-banner {
+    position: sticky;
+    top: calc(var(--header-height) + 32px);
+    margin-block-start: 16px;
+    width: 100%;
+
+  }
+
+  .detail-stats .stats-item {
+    padding-block: 24px;
+    gap: 8px;
+  }
+}
